--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
             "Indra Maulana - Bandung Utara",
             "Joko Prasetyo - Bandung Tengah",
             "Kartika Sari - Bandung Timur",
+            "Franciscus Alexander Ferry Firmanto",
             "Luki Setiawan - Bandung Barat"
         ];
 
